--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,15 +1,17 @@
 name: Waka Readme
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Runs once a day at midnight
+  # for manual workflow trigger
   workflow_dispatch:
+  schedule:
+    # runs at 12 AM UTC (5:30 AM IST)
+    - cron: "0 0 * * *"
 
 jobs:
   update-readme:
-    name: Update WakaTime stats
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@v0.1.9
+      - uses: athul/waka-readme@master # this action name
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
